# bom

./: Cargo.toml  Dockerfile  application.yaml  docker-compose.yml
.github/workflows/: cleanup-old-images.yml  deploy.yml  pr-build.yaml
.sqlx/: query-249009cba920d76adec64bde10350693e5a3920899cd837c9e1d9550b1807a1c.json  query-c4f265fa3a4e66b15bb07cc9c74b44f64fe7debb3ab6859f1e75fb9f566c57ba.json  query-c8cc21e03ea19d1a296eefe60b888c7d89fbb914a3cfed51bab2eede0d78cbb7.json  query-ccacb5e7d348ec2e3ad49a36a46bc379ae24aa494b3397634d9058c3d2e4baab.json
kubernetes/: deployment.yaml  kustomization.yaml  secret.yaml
migrations/: 0001_init.sql  0002_add_perth_airport.sql  0003_add_satellite_table.sql
src/: background.rs  bom.rs  main.rs  types.rs  willyweather.rs
