[package]
name = "bom"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async_ftp = "6.0.0"
axum = "0.8.3"
chrono = "0.4.40"
image = "0.25.6"
regex = "1.11.1"
rust-s3 = "0.37.0"
sqlx = { version = "0.8.4", features = ["runtime-tokio", "postgres", "tls-rustls", "macros", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twilight-cache-inmemory = "0.16.0"
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
twilight-util = { version = "0.16.0", features = ["builder"] }
vesper = "0.13.0"
turbojpeg = { version = "1.3.1-pre", features = ["image"] }
reqwest = "0.12.15"

[patch.crates-io]
vesper = { git = "https://github.com/AlvaroMS25/vesper.git", branch = "next" }
turbojpeg = { git = "https://github.com/honzasp/rust-turbojpeg.git", rev = "b85e41b" }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.0"

