[package]
name = "bom"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
async_ftp = "6.0.0"
axum = "0.8.7"
chrono = "0.4.42"
image = "0.25.9"
regex = "1.12.2"
rust-s3 = "0.37.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "tls-rustls", "macros", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
twilight-cache-inmemory = "0.16.0"
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
twilight-util = { version = "0.16.0", features = ["builder"] }
vesper = "0.13.0"
turbojpeg = { version = "1.3.3", features = ["image"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
phf = { version = "0.13.1", features = ["macros"] }

[patch.crates-io]
vesper = { git = "https://github.com/AlvaroMS25/vesper.git", branch = "next" }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"

