[package]
name = "bom"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
async_ftp = "6.0.0"
axum = "0.8.8"
chrono = "0.4.44"
image = "0.25.9"
regex = "1.12.3"
rust-s3 = "0.37.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "tls-rustls", "macros", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
twilight-cache-inmemory = "0.16.0"
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
twilight-util = { version = "0.16.0", features = ["builder"] }
vesper = "0.13.0"
turbojpeg = { version = "1.4.0", features = ["image"] }
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = "1.0.228"
serde_json = "1.0.149"
phf = { version = "0.13.1", features = ["macros"] }

[patch.crates-io]
vesper = { git = "https://github.com/AlvaroMS25/vesper.git", branch = "next" }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"

